# Phaistos

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  Makefile  README.md  README.md.md  SuperOptimizer.sln  SuperOptimizer.vcxproj  SuperOptimizer.vcxproj.filters  cmake_install.cmake  config.hpp  emu.cpp  emulator.cpp  lib6502.c  main.cpp  opcode_def.cpp  opcode_names.cpp  phaistos  phaistos-spec.md  seq_gen.cpp  seq_gen.hpp  types.hpp
ParseOpcodeTable/: 6502-transitions.txt  ParseOpcodeTable.sln  ParseOpcodeTable.vcxproj  main.cpp  output.txt  string_conv.h
examples/: inc16.pha  memcopy.pha  multiply.pha  optimize.pha  sprite-setup.pha  synthesize.pha
src/: common.hpp  cpu.cpp  cpu.hpp  logger.cpp  logger.hpp  main.cpp  memory.hpp  optimization_spec.hpp  optimizer.cpp  optimizer.hpp  parser.cpp  parser.hpp  sequence_generator.cpp  sequence_generator.hpp  solution_formatter.cpp  solution_formatter.hpp  transformation_cache.cpp  transformation_cache.hpp  value.cpp  value.hpp  verification_engine.cpp  verification_engine.hpp
src/fake6502/: fake6502.cpp  fake6502.hpp  fake6502_example.cpp
txts/: 6502-flags.txt  6502-transitions.txt  6502_6510_8500_8502 Opcodes.htm  opt65.c
